[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/GUI/Options_Menu/Button_Controllers/Sliders/MusicHSlider.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Themes/gui_theme_medium.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/GUI/Options_Menu/Button_Controllers/Sliders/MasterHSlider.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/GUI/Options_Menu/Button_Controllers/Sliders/SoundEffectsHSlider.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/GUI/options_menu.gd" type="Script" id=5]
[ext_resource path="res://Scenes/GUI/Options_Menu/Button_Controllers/Sliders/AmbientSoundsHSlider.tscn" type="PackedScene" id=6]
[ext_resource path="res://Resources/Themes/gui_theme_large.tres" type="Theme" id=7]
[ext_resource path="res://Scenes/GUI/Options_Menu/Button_Controllers/FullScreenCheckBox.tscn" type="PackedScene" id=8]

[node name="OptionsMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
first_button_to_focus_node_path = NodePath("BackButton")

[node name="TitleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -426.5
margin_top = 36.0
margin_right = 426.5
margin_bottom = 57.0
theme = ExtResource( 7 )
text = "OPTIONS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -282.5
margin_top = -173.5
margin_right = 282.5
margin_bottom = 173.5
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreenContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 565.0
margin_bottom = 29.0
custom_constants/separation = 10
alignment = 1

[node name="CheckBox" parent="VBoxContainer/FullScreenContainer" instance=ExtResource( 8 )]
margin_left = 212.0
margin_right = 236.0

[node name="Label" type="Label" parent="VBoxContainer/FullScreenContainer"]
margin_left = 246.0
margin_top = 4.0
margin_right = 352.0
margin_bottom = 25.0
text = "FULL_SCREEN"

[node name="SoundContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 59.0
margin_right = 565.0
margin_bottom = 347.0
custom_constants/separation = 20
alignment = 1

[node name="MasterLabel" type="Label" parent="VBoxContainer/SoundContainer"]
margin_right = 565.0
margin_bottom = 21.0
text = "MASTER_VOLUME"
align = 1
valign = 1

[node name="MasterHSlider" parent="VBoxContainer/SoundContainer" instance=ExtResource( 3 )]
margin_top = 41.0
margin_right = 565.0
margin_bottom = 57.0
focus_neighbour_top = NodePath("../../FullScreenContainer/CheckBox")
focus_neighbour_bottom = NodePath("../MusicHSlider")
focus_next = NodePath("../MusicHSlider")
focus_previous = NodePath("../../FullScreenContainer/CheckBox")

[node name="MusicLabel" type="Label" parent="VBoxContainer/SoundContainer"]
margin_top = 77.0
margin_right = 565.0
margin_bottom = 98.0
text = "MUSIC_VOLUME"
align = 1
valign = 1

[node name="MusicHSlider" parent="VBoxContainer/SoundContainer" instance=ExtResource( 1 )]
margin_top = 118.0
margin_right = 565.0
margin_bottom = 134.0
focus_neighbour_top = NodePath("../MasterHSlider")
focus_neighbour_bottom = NodePath("../SoundEffectsHSlider")
focus_next = NodePath("../SoundEffectsHSlider")
focus_previous = NodePath("../MasterHSlider")

[node name="SoundEffectsLabel" type="Label" parent="VBoxContainer/SoundContainer"]
margin_top = 154.0
margin_right = 565.0
margin_bottom = 175.0
text = "SOUND_EFFECTS_VOLUME"
align = 1
valign = 1

[node name="SoundEffectsHSlider" parent="VBoxContainer/SoundContainer" instance=ExtResource( 4 )]
margin_top = 195.0
margin_right = 565.0
margin_bottom = 211.0
focus_neighbour_top = NodePath("../MusicHSlider")
focus_neighbour_bottom = NodePath("../../../BackButton")
focus_next = NodePath("../../../BackButton")
focus_previous = NodePath("../MusicHSlider")

[node name="AmbientSoundsLabel" type="Label" parent="VBoxContainer/SoundContainer"]
margin_top = 231.0
margin_right = 565.0
margin_bottom = 252.0
text = "AMBIENT_SOUNDS_VOLUME"
align = 1
valign = 1

[node name="AmbientSoundsHSlider" parent="VBoxContainer/SoundContainer" instance=ExtResource( 6 )]
margin_top = 272.0
margin_right = 565.0
margin_bottom = 288.0
focus_neighbour_top = NodePath("../SoundEffectsHSlider")
focus_neighbour_bottom = NodePath("../../../BackButton")

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -114.5
margin_top = -90.0
margin_right = 114.5
margin_bottom = -40.0
focus_neighbour_left = NodePath("../VBoxContainer/SoundContainer/AmbientSoundsHSlider")
focus_neighbour_top = NodePath("../VBoxContainer/SoundContainer/AmbientSoundsHSlider")
focus_neighbour_right = NodePath("../VBoxContainer/FullScreenContainer/CheckBox")
focus_neighbour_bottom = NodePath("../VBoxContainer/FullScreenContainer/CheckBox")
focus_next = NodePath("../VBoxContainer/FullScreenContainer/CheckBox")
focus_previous = NodePath("../VBoxContainer/SoundContainer/SoundEffectsHSlider")
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="." to="." method="_on_OptionsMenu_visibility_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
